--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@
   font-weight: 700;
 }
 
+button {
+  cursor: pointer;
+}
+
 * {
   font-family: 'TT Lakes Medium';
   font-size: 16px;
@@ -40,16 +44,19 @@
 
 
 body {
-  width: 320px;
   background-color: #fff;
 }
 
+.menu-container {
+  height: 100vh;
+}
 
-aside {
+.menu {
   display: flex;
   flex-direction: column;
-  height: 100%;
   box-shadow: -2px 0px 4px rgb(69 79 126 / 2%), 16px 0px 52px rgb(14 24 80 / 20%);
+  width: 320px;
+  min-height: 100%;
 }
 
 .menu__header {
@@ -57,7 +64,7 @@ aside {
   background-color: #FFFFFF;
 }
 
-.header__items {
+.menu__items {
   display: flex;
   align-items: center;
   height: 88px;
@@ -81,7 +88,7 @@ aside {
 }
 
 .header__logo {
-  background-image: url('../1.3/1.3/assets/icons/Group.png');
+  background-image: url('/web-block/1.4/assets2/icon/Group.png');
   outline: none;
   background-repeat: no-repeat;
   background-position: center;
@@ -102,7 +109,7 @@ aside {
   display: grid;
   justify-items: baseline;
   gap: 32px;
-  margin-top: 50px;
+  margin-top: 34px;
   margin-bottom: 20px;
 }
 
@@ -139,20 +146,20 @@ aside {
   margin-left: 24px;
 }
 
-.button__icon-contacts {
+.contacts__button {
   margin-right: 16px;
 }
 
 .button__icon--chel {
-  background-image: url('/web-block/1.3/1.3/assets/icons/chel.png')
+  background-image: url('/web-block/1.4/assets2/icon/chel.png')
 }
 
 .button__icon--sms {
-  background-image: url('/web-block/1.3/1.3/assets/icons/sms.png')
+  background-image: url('/web-block/1.4/assets2/icon/sms.png')
 }
 
 .button__icon--phone {
-  background-image: url('/web-block/1.3/1.3/assets/icons/phone.png')
+  background-image: url('/web-block/1.4/assets2/icon/phone.png')
 }
 
 .contacts__email {
@@ -174,7 +181,7 @@ aside {
     margin-bottom: 32px;
 }
 
-.contancts__buttom--lang {
+.contacts_language-button {
   background-color: transparent;
   outline: none;
   border: none;
